# ServiceBook

./: .gitignore  .pre-commit-config.yaml  README.md  local.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build.yml
alembic/: env.py
alembic/versions/: 001_init_user_model.py  002_added_access_token.py  002_created_brand_and_car_models.py  003_made_email_nullable.py  004_created_updated_fields.py
app/: config.py  main.py  setup_db.py
app/api/v1/: auth.py  cars.py  users.py
app/auth/: config.py  models.py  router.py
app/core/: auth.py  base_repository.py  config.py  requests.py  responses.py  setup_db.py
app/core/utils/: auth.py  base_repository.py  exceptions.py  repository_utils.py  requests.py  responses.py  unit_of_work.py
app/domains/cars/: dependencies.py  models.py  repositories.py  schemas.py  services.py  uow.py
app/domains/users/: dependencies.py  models.py  repositories.py  repository.py  schemas.py  service.py  services.py  uow.py
app/models/: __init__.py  base.py  user.py
app/services/: user_service.py
app/users/: auth.py  models.py  routes.py
app/utils/: auth.py
compose/backend/: Dockerfile
tests/: conftest.py  test_example.py
