[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["max31ru12 <maxevg72@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.37"
alembic = {extras = ["async"], version = "^1.14.1"}
fastapi = {extras = ["python-multipart"], version = "^0.115.8"}
pydantic = {extras = ["email"], version = "^2.10.6"}
python-jose = "^3.3.0"
bcrypt = "4.0.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
uvicorn = "^0.34.0"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.7.1"
orjson = "^3.10.15"
python-multipart = "^0.0.20"
ruff = "^0.9.6"


[tool.poetry.group.dev.dependencies]
httpx = "^0.28.1"
pytest = "^8.3.4"
pre-commit = "^4.1.0"
ruff = "^0.9.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120  # Устанавливаем максимальную длину строки в 120 символов

[tool.ruff.lint]
select = [
    "F",  # flake8 - ошибки переменных (неиспользуемые, неопределенные)
    "I",  # isort - упорядочевание импортов
    "E",  # pycodestyle - ошибки форматирования
    "W",  # pycodestyle - предупреждения о коде
    "B",  # flake8-bugbear потентциальные баги
    "C90", #  ьссфиу - сложность кода
]
ignore = [
    "E501", # PEP8 length > 79
] # ignored rules

[tool.ruff.format]
quote-style = "double"  # Всегда использовать двойные кавычки
indent-style = "space"  # Использовать пробелы вместо табов (tab)
line-ending = "lf"  # Использовать Unix-стиль переносов строк

[tool.ruff.isort]
known-first-party = ["my_project"]  # Эти настройки сортируют импорты
combine-as-imports = true
